feat: sonarqube warnings resolved